--- a/salt/repository/salt.local.repo.jinja
+++ b/salt/repository/salt.local.repo.jinja
@@ -2,7 +2,7 @@
 {% if os_release == '7.4.1708' %}
 [salt_RH_7.local.repo]
 name=salt local repository
-baseurl=http://{{salt['pillar.get']('core:salt_master_ip')}}/salt_RH_7.local.repo
+baseurl=http://{{salt['pillar.get']('engine_connect:repository_server_ip')}}/salt_RH_7.local.repo
 gpgcheck=0
 enabled=1
 {% endif %}
@@ -12,9 +12,8 @@ enabled=1
 {% if os_release == '27' %}
 [salt_Fedora_27.local.repo]
 name=salt local repository
-baseurl=http://{{salt['pillar.get']('core:salt_master_ip')}}/salt_Fedora_27.local.repo
+baseurl=http://{{salt['pillar.get']('engine_connect:repository_server_ip')}}/salt_Fedora_27.local.repo
 gpgcheck=0
 enabled=1
 {% endif %}
 {% endif %}
-
